--- a/css/style.bundle.css
+++ b/css/style.bundle.css
@@ -1221,9 +1221,11 @@ h6 {
   will-change: transform;
   box-shadow: 0 0.5625rem 2.5rem rgba(5, 12, 28, 0.15);
 }
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 1005px) {
   .modal__container {
     max-width: 100%;
+    width: 100%;
+    height:100%;
   }
 }
 .modal[aria-hidden='false'] .modal__container {
