--- a/css/style.bundle.css
+++ b/css/style.bundle.css
@@ -1583,6 +1583,11 @@ h6 {
 .hero {
   padding-top: 4.25rem;
   padding-bottom: 3.5rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 0;
 }
 @media screen and (max-width: 767px) {
   .hero {
