Поправил верстку (чекбокс)
Поправил верстку (чекбокс)

--- a/css/style.bundle.css
+++ b/css/style.bundle.css
@@ -1093,6 +1093,7 @@ h6 {
 .check {
   padding-left: 2.0625rem;
   display: inline-block;
+  position: relative;
 }
 .check__input {
   position: absolute;
